--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="Love running, run, running club, runners, Ireland, Dublin, sport, exercise">
     <title>Love Running</title>
     <!-- Favicon-->
-      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon/favicon-16x16.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>
@@ -20,7 +20,7 @@
             <h1 id="logo">Love Running</h1>
         </a>
         <nav>
-            <ul>
+            <ul id="menu">
                 <li><a href="">Home</a></li>
                 <li><a href="">Gallery</a></li>
                 <li><a href="">Sign Up</a></li>
