--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
     <!-- Favicon-->
       <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png"><img  
+  <section></section>
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
-<body>
+<body>  
+    
     <!--Header-->
     <header>
         <a href="index.html">
             <h1 id="logo">Love Running</h1>
         </a>
         <input type="checkbox" id="nav-toggle" name="nav-toggle">
-        <label for="nav-toggle" class="nav-toggle-label">X</label>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <i class="fa-solid fa-bars"></i>
+        </label>
         <nav>
             <ul id="menu">
                 <li><a href="" class="active">Home</a></li>
@@ -34,7 +38,20 @@
     <main>Main content</main>
 
     <!--Footer-->
-    <footer>Footer</footer>
+    <footer>
+        <ul>
+            <li><a href="https://Facebook.com" target="_blank" rel="noopener" 
+                aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a></li>
+            <li><a href="https://youtube.com/" target="_blank" rel="noopener" 
+                aria-label="Visit our YouTube Page (Opens in a new tab)"><i class="fa-brands fa-youtube"></i></a></li>
+            <li><a href="https://instagram.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Instagram page (Opens in a new tab)"><i class="fa-brands fa-instagram"></i></a></li>
+            </ul>
+    </footer>
     
+    <!-- Font awesome kit -->
+    <script src="https://kit.fontawesome.com/d65843442d.js" crossorigin="anonymous"></script>
 </body>
 </html>
