--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
     <!--Footer-->
     <footer>
-        <ul>
+        <ul id="social-networks">
             <li><a href="https://Facebook.com" target="_blank" rel="noopener" 
                 aria-label="visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a></li>
             <li><a href="https://twitter.com/" target="_blank" rel="noopener" 
