add cover text with club name and locations

--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <!-- Favicon-->
       <link rel="apple-touch-icon" sizes="180x180" href="assets/favicon-zip/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-zip/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png"><img  
-  <section></section>
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-zip/favicon-16x16.png">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 <body>  
@@ -27,15 +26,22 @@
         </label>
         <nav>
             <ul id="menu">
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">Gallery</a></li>
-                <li><a href="">Sign Up</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="signup.html">Sign Up</a></li>
             </ul>
         </nav>
     </header>
 
     <!--Main content-->
-    <main>Main content</main>
+    <main>
+        <section id="hero">
+            <div id="cover-text">
+                <h2>Love Running</h2>
+                <h3>Dublin Docklands & PHoenix Park</h3>
+            </div>
+        </section>
+    </main>
 
     <!--Footer-->
     <footer>
