--- a/signup.html
+++ b/signup.html
@@ -34,7 +34,8 @@
     </header>
 
     <!--Main content-->
-    <main>Main content</main>
+    <main>
+        <section> id="hero"</section>Main content</main>
 
     <!--Footer-->
     <footer>
