fixed error found with validator

--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                     <div id="circle-cover-bg"></div>
                 </div>
             </div>
+            </div>
         </section>
                 <!-- Meetup Times section -->
         <section id="meetups">
